wp-provisioner/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-wp-prov-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: wp-prov.zagoapps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wp-provisioner
                port:
                  number: 80
  tls:
    - hosts:
        - wp-prov.zagoapps.com
      secretName: wp-prov-server-tls
